--- a/src/Components/Buttons/Buttons.css
+++ b/src/Components/Buttons/Buttons.css
@@ -1,3 +1,10 @@
+a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
 .Buttons{
     background-color: #00000000;
     color: var(--colorPrimaryLight);
