--- a/src/Components/HeaderGeral/HeaderGeral.css
+++ b/src/Components/HeaderGeral/HeaderGeral.css
@@ -22,7 +22,7 @@
         gap: 1.8vw;
 
         .buttonCurriculo{
-            background-color: var(--colorPrimaryColorful);
+            background-color: blue;
             color: var(--colorPrymaryDark);
             font-size: calc(.4em + .5vw);
             font-weight: bold;
