--- a/src/Components/FooterGeral/FooterGeral.css
+++ b/src/Components/FooterGeral/FooterGeral.css
@@ -11,6 +11,11 @@
     border-radius: 5px;
     box-shadow: 2px 2px 20px var(--colorSecundaryBlack);
 
+    & a{
+        display: flex;
+        width: 100%;
+    }
+
     & h3{
         font-size: calc(.7em + 1.3vw);
         color: var(--colorPrimaryColorful);
